--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRevealLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,16 +9,17 @@
 
     <!-- Your secondary layout here -->
     <LinearLayout
+        android:id="@+id/layoutDelete"
+        android:background="@android:color/holo_red_light"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_red_light"
             android:text="@string/delete"
-
+            android:gravity="center"
             />
 
     </LinearLayout>
@@ -29,6 +31,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tvUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
